tests/semantic/stmt_builder/snapshots/r#mod__semantic__statement_building__block_building__empty_block_building.snap
---
source: tests/semantic/statement_building/block_building.rs
expression: "&test_ctx.prog_ctx.func_ctx"
---
funcs:
  0:
    name: main
    namespace_id: 0
    func_type: Global
    params: []
    return_type:
      Primitive: Void
    block:
      body:
        - Block:
            block:
              body: []
              scope_id: 3
      scope_id: 2
    range:
      start: 0
      end: 0
member_functions: {}
global_functions:
  ? - 0
    - main
  : 0
next_function_id: 1
